# markstate

./: README.md  pyproject.toml
.github/workflows/: ci.yml
doc_flow/: __main__.py  cli.py  config.py  engine.py  frontmatter.py
examples/grouped-changes/: flow.yml
examples/openspec/: flow.yml
examples/scoped-tracks/: flow.yml
examples/sdd/: flow.yml  flow_hooks.py
examples/shared-flow/docs-repo/: flow.yml
examples/shared-flow/source-repo/: flow.yml
examples/use-fallback/project/: flow.yml
examples/use-fallback/shared/: flow.yml  flow_hooks.py
markstate/: __init__.py  __main__.py  cli.py  config.py  engine.py  frontmatter.py
skills/markstate/: SKILL.md
skills/openspec/: SKILL.md
skills/sdd/: SKILL.md
tests/: test_cli.py  test_config.py  test_engine.py  test_examples.py  test_frontmatter.py
