[project]
name = "markstate"
version = "0.0.0"
description = "Generic document flow processor for state tracking in markdown front matter"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0.3",
]

[project.scripts]
markstate = "markstate.cli:main"

[tool.setuptools.packages.find]
include = ["markstate*"]

[tool.setuptools.package-data]
markstate = ["skills/**/*"]

[tool.uv]
package = true

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
]

[tool.ruff.format]
quote-style = "double"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
